民事訴訟法 2013.4.16

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -36,9 +36,9 @@
 
 * 17 因登記涉訟者，得由登記地之法院管轄。
 
-* 18 因遺產之繼承、分割、特留分或因遺贈或其他因死亡而生效力之行為涉訟者，得由繼承開始時被繼承人住所地之法院管轄。被繼承人住所地之法院，不能行使職權，或訴之原因事實發生於被繼承人居所地，或被繼承人為中華民國人，於繼承開始時，在中華民國無住所或住所不明者，定前項管轄法院時，準用第一條之規定。
+* 18 因自然人死亡而生效力之行為涉訟者，得由該自然人死亡時之住所地法院管轄。前項法院不能行使職權，或訴之原因事實發生於該自然人居所地，或其為中華民國人，於死亡時，在中華民國無住所或住所不明者，定前項管轄法院時，準用第一條之規定。
 
-> 釋：一、第一條第一項後段除原條文「被告住所地之法院，不能行使職權者，由其居所地之法院管轄」外，已另增訂「訴之原因事實發生於被告居所地者，由其居所地之法院管轄」，本條第二項自應配合修正。二、準用者，並非對於所準用之規定完全適用，仍應依事件之性質定其適用之範圍，第二項後段爰修正為「定前項管轄法院時，準用第一條之規定」。
+> 釋：家事事件法第三條第三項第六款將因繼承回復、遺產分割、特留分、遺贈、確認遺囑真偽或繼承人間因繼承所生事件列為家事事件，並於第七十條明定其管轄法院，依該法第一百九十六條規定應優先適用，原條文關於上開事件管轄法院之規定應予刪除。至於該法規定以外其他因死亡而生效力之行為，例如死因贈與、死因契約等類情形，仍有本條之適用，爰配合修正第一項。又因繼承所生家事訴訟事件應適用家事事件法，原條文規定之被繼承人應修正為自然人，爰配合酌作文字修正。
 
 * 19 因遺產上之負擔涉訟，如其遺產之全部或一部，在前條所定法院管轄區域內者，得由該法院管轄。
 
@@ -108,7 +108,9 @@
 
 > 釋：一、迴避之裁定，乃行使審判權之行為，不應以辦理行政事務之院長名義為之，為免引起誤會，爰將「院長」修正為「兼院長之法官」。又此「兼院長之法官」包括最高法院院長，乃屬當然。二、「推事」修正為「法官」。三、第二項「許可」修正為「同意」，俾與裁定許可有所區別。
 
-* 39 本節之規定，於法院書記官及通譯準用之。
+* 39 本節之規定，於司法事務官、法院書記官及通譯準用之。
+
+> 釋：為建立公正之形象，司法事務官辦理相關事務時，應維持其公正、中立性，有關法官迴避之規定應予準用，爰修正本條。
 
 * 40 有權利能力者，有當事人能力。胎兒，關於其可享受之利益，有當事人能力。非法人之團體，設有代表人或管理人者，有當事人能力。中央或地方機關，有當事人能力。
 
@@ -224,9 +226,9 @@
 
 > 釋：一、原條文規定，非律師而為訴訟代理人者，法院得以裁定禁止之。實務上以裁定禁止非律師為訴訟代理人者，並不多見，致效果不彰。而民事訴訟較具技術性，無法律素養之人代理訴訟行為，實不易勝任，為保護當事人權益，並使訴訟程序得以順利進行，訴訟代理人原則上應委任律師為之。惟我國不採強制律師代理制度，故如經審判長許可，亦得委任非律師為訴訟代理人。又審判長指揮訴訟，此項許可由審判長為之即可。爰修正第一項。二、審判長之許可，本應以裁定為之，如非律師為訴訟代理人，審判長已許其為本案訴訟行為，應視為已有許可為訴訟代理人之裁定，以省勞費，乃於第二項設擬制許可之規定。三、委任非律師為訴訟代理人，雖經審判長許可，如其不適或不宜為訴訟行為，審判長自得隨時以裁定撤銷之。又為便利委任人另行委任適當之訴訟代理人或自為訴訟，此項撤銷裁定並應送達於為訴訟委任之人。乃增列第三項。
 
-* 69 訴訟代理人，應於最初為訴訟行為時，提出委任書。但由當事人以言詞委任，經法院書記官記明筆錄，或經法院、審判長依法選任者，不在此限。前項委任或選任，應於每審級為之。但有下列情形之一，不在此限：一、當事人就特定訴訟於委任書表明其委任不受審級限制，並經公證者。二、依第五百七十一條之一第二項或第五百八十五條第一項選任者。
+* 69 訴訟代理人，應於最初為訴訟行為時，提出委任書。但由當事人以言詞委任，經法院書記官記明筆錄，或經法院、審判長依法選任者，不在此限。前項委任或選任，應於每審級為之。但當事人就特定訴訟於委任書表明其委任不受審級限制，並經公證者，不在此限。
 
-> 釋：鑑於受輔助宣告之人訴訟能力不足，為免法院為其每審級選任訴訟代理人之勞費，乃於第二項但書第二款規定，增列法院依第五百七十一條之一第二項選任者，亦可不受審級之限制。至於審判長為受輔助宣告之人選任訴訟代理人時，如認有必要，自仍得選任其為某審級之訴訟代理人，並於裁定中特為表明。
+> 釋：一、原條文第一項未修正。二、家事事件法第十五條規定法院於認有必要時，得為有程序能力人之利益選任程序監理人，同法第十六條第三項並規定選任之程序監理人不受審級限制，法院自毋庸再為其選任訴訟代理人，且本法刪除第五百七十一條之一第二項及第五百八十五條第一項規定，爰配合刪除原條文第二項第二款，並酌作文字修正。
 
 * 70 訴訟代理人就其受委任之事件有為一切訴訟行為之權。但捨棄、認諾、撤回、和解、提起反訴、上訴或再審之訴及選任代理人，非受特別委任不得為之。關於強制執行之行為或領取所爭物，準用前項但書之規定。如於第一項之代理權加以限制者，應於前條之委任書或筆錄內表明。
 
@@ -294,9 +296,9 @@
 
 > 釋：一、本條新增。二、本條係原民事訴訟費用法第二十條移列修正。原條文所定之裁判費因社會經濟狀況變遷，顯屬偏低，爰提高為新臺幣一千元，以符實際。
 
-* 77.19 聲請或聲明不徵費用。但下列第一款之聲請，徵收裁判費新臺幣五百元；第二款至第七款之聲請，徵收裁判費新臺幣一千元：一、聲請發支付命令。二、聲請參加訴訟或駁回參加。三、聲請回復原狀。四、起訴前聲請證據保全。五、聲請假扣押、假處分或撤銷假扣押、假處分裁定。六、聲請監護宣告、輔助宣告；變更或撤銷監護宣告、輔助宣告。七、聲請公示催告、除權判決或宣告死亡。
+* 77.19 聲請或聲明不徵費用。但下列第一款之聲請，徵收裁判費新臺幣五百元；第二款至第七款之聲請，徵收裁判費新臺幣一千元：一、聲請發支付命令。二、聲請參加訴訟或駁回參加。三、聲請回復原狀。四、起訴前聲請證據保全。五、聲請假扣押、假處分或撤銷假扣押、假處分裁定。六、（刪除）七、聲請公示催告或除權判決。
 
-> 釋：一、配合修正後民法已將「禁治產」改為「監護」，並增加輔助宣告規定，爰配合修正現行條文但書第六款。二、修正後民法第十四條第四項、第十五條之一第三項立法意旨，係為避免當事人須待監護宣告或輔助宣告、或撤銷監護宣告或輔助宣告之聲請之裁定確定後，始得另行聲請輔助宣告之不便。是如依本法第六百二十四條之六規定聲請變更監護宣告為輔助宣告；依第六百二十四之七規定聲請變更輔助宣告為監護宣告者，均屬聲請變更事件，應依第六款規定，徵收裁判費；至依第六百二十四條之五規定，因法院對於撤銷監護宣告聲請，認仍有輔助宣告之必要而輔助宣告；依第六百二十四條之八規定變更輔助宣告之聲請為監護宣告之聲請者，則因均屬同一事件，應不另收費。
+> 釋：家事事件法第三條第四項規定宣告死亡事件、撤銷死亡宣告事件、監護或輔助宣告事件及撤銷監護或輔助宣告事件屬丁類家事非訟事件，其聲請費用之徵收，依家事事件法第九十七條規定，應準用非訟事件法，無本法之適用。爰配合刪除原條文第六款，及第七款關於宣告死亡部分之規定。
 
 * 77.2 以一訴主張數項標的者，其價額合併計算之。但所主張之數項標的互相競合或應為選擇者，其訴訟標的價額，應依其中價額最高者定之。以一訴附帶請求其孳息、損害賠償、違約金或費用者，不併算其價額。
 
@@ -946,9 +948,9 @@
 
 > 釋：一、本條係新增。二、司法事務官設置之目的，在於合理分配司法資源，並減輕法官工作負擔，若其處理事件所為處分之效力與原由法官作成者不同，將使程序繁複，影響當事人之權益，爰增訂本條明定之，以杜爭議。
 
-* 240.4 當事人對於司法事務官處理事件所為之終局處分，得於處分送達後十日之不變期間內，以書狀向司法事務官提出異議。但支付命令之異議仍適用第五百十八條及第五百十九條之規定。司法事務官認前項異議有理由時，應另為適當之處分；認異議為無理由者，應送請法院裁定之。法院認第一項之異議為有理由時，應為適當之裁定；認異議為無理由者，應以裁定駁回之。前項裁定，應敘明理由，並送達於當事人。
+* 240.4 當事人對於司法事務官處理事件所為之終局處分，得於處分送達後十日之不變期間內，以書狀向司法事務官提出異議。但支付命令經異議者，除有第五百十八條所定或其他不合法之情形，由司法事務官駁回外，仍適用第五百十九條規定。司法事務官認前項異議有理由時，應另為適當之處分；認異議為無理由者，應送請法院裁定之。法院認第一項之異議為有理由時，應為適當之裁定；認異議為無理由者，應以裁定駁回之。前項裁定，應敘明理由，並送達於當事人。
 
-> 釋：一、本條係新增。二、為保障當事人之權益，並達到追求程序迅速與訴訟經濟之目的，對於司法事務官處理事件所為之終局處分，應許當事人得逕向為處分之司法事務官提出異議，由其儘速重行審查原處分是否妥當，而為適當之救濟。但債務人對於支付命令提出異議者，仍應適用第五百十八條及第五百十九條規定，而無本條規定之適用，爰增訂第一項明定之。三、司法事務官受理前項異議，如認異議為有理由者，應自行另為適當之處分；如認異議為無理由者，則仍應由原法院之法官處理，以充分保障當事人之權益，爰增訂第二項。四、法院受理第一項之異議時，應依各該事件之規定審理，如認異議為有理由者，應為適當之裁定；如認異議為無理由者，應以裁定駁回之。而法院所為上開裁定，均應敘明理由，並送達於當事人，爰增訂第三、四項明定之。至對於法院所為之裁定是否得提起抗告，則仍應依各該事件之相關規定。
+> 釋：一、支付命令事件已移由司法事務官處理，債務人對支付命令異議如逾民事訴訟法第五百十八條之二十日期間或有其他不合法情形（例如無異議權人聲明異議，或書狀不合程式、異議未經合法代理，經命補正而未補正等），仍應由司法事務官作成第一次處分。當事人如對司法事務官駁回異議之處分不服者，得聲明異議以為救濟，爰修正第一項。二、原條文第二項至第四項未修正。
 
 * 241 當事人書狀、筆錄、裁判書及其他關於訴訟事件之文書，法院應保存者，應由書記官編為卷宗。卷宗滅失事件之處理，另以法律定之。
 
@@ -1492,9 +1494,9 @@
 
 > 釋：一、第三百七十七條第二項增訂第三人得參加和解之規定，如第三人參加和解而成立者，和解筆錄正本自應送達於該第三人，爰修正第三項規定。二、法院依第三百七十七條之一或第三百七十七條之二規定將和解方案告知或送達於當事人及參加和解之第三人時，未必均發生視為和解成立之效力。為使當事人及該第三人知悉是否已依和解方案發生視為和解成立之效力，爰增訂第四項，明定依上開規定視為和解成立者，法院書記官應於和解成立之日起十日內，將和解內容及成立日期通知當事人及參加和解之第三人，該通知並視為和解筆錄，而得為強制執行法第六條第一項第三款規定之執行名義之證明文件。
 
-* 380 和解成立者，與確定判決有同一之效力。和解有無效或得撤銷之原因者，當事人得請求繼續審判。第五百條至第五百零二條及第五百零六條之規定，於前項情形準用之。
+* 380 和解成立者，與確定判決有同一之效力。和解有無效或得撤銷之原因者，當事人得請求繼續審判。請求繼續審判者，應繳納第八十四條第二項所定退還之裁判費。第五百條至第五百零二條及第五百零六條之規定，於第二項情形準用之。第五編之一第三人撤銷訴訟程序之規定，於第一項情形準用之。
 
-> 釋：一、第一項調整標點符號。二、和解有無效或得撤銷之原因，當事人請求繼續審判者，除準用再審程序關於期間限制（第五百條）及裁判方式（第五百零二條）之規定外，就應遵守之程式（第五百零一條）及保護善意第三人（第五百零六條）之規定，亦應準用，爰修正第三項。
+> 釋：一、原條文第一項、第二項未修正。二、當事人以和解有無效或得撤銷原因，請求繼續審判者，自應補繳因和解成立而退還之裁判費，爰增訂第三項。三、原條文第三項移列第四項，並配合作文字修正。四、因第一項和解之效力可能及於第三人，第三人之固有權益恐亦因該和解致受損害，而本條第二項有關繼續審判之請求，又限於和解之當事人始得提起，上開第三人則無適用餘地，為保障其固有權益及程序權，明定得準用第五編之一規定，於和解筆錄作成後，提起撤銷訴訟，以為救濟，爰增訂第五項。
 
 * 380.1 當事人就未聲明之事項或第三人參加和解成立者，得為執行名義。
 
@@ -1526,9 +1528,9 @@
 
 * 388 除別有規定外，法院不得就當事人未聲明之事項為判決。
 
-* 389 下列各款之判決，法院應依職權宣告假執行：一、本於被告認諾所為之判決。二、命履行扶養義務之判決。但以起訴前最近六個月分及訴訟中履行期已到者為限。三、就第四百二十七條第一項至第四項訴訟適用簡易程序所為被告敗訴之判決。四、（刪除）。五、所命給付之金額或價額未逾新臺幣五十萬元之判決。計算前項第五款價額，準用關於計算訴訟標的價額之規定。第一項第五款之金額或價額，準用第四百二十七條第七項之規定。
+* 389 下列各款之判決，法院應依職權宣告假執行：一、本於被告認諾所為之判決。二、（刪除）三、就第四百二十七條第一項至第四項訴訟適用簡易程序所為被告敗訴之判決。四、（刪除）五、所命給付之金額或價額未逾新臺幣五十萬元之判決。計算前項第五款價額，準用關於計算訴訟標的價額之規定。第一項第五款之金額或價額，準用第四百二十七條第七項之規定。
 
-> 釋：一、第一項本文「左列」修正為「下列」。二、假執行制度之目的，乃在防止敗訴當事人提起無益之上訴，使權利人能早日實現其權利。簡易訴訟制度之目的，亦在謀求訴訟迅速終結，儘速實現權利人之權利。故適用簡易程序所為被告敗訴之判決，應許法院依職權宣告假執行，以發揮假執行制度及簡易訴訟制度之功能，爰修正第一項第三款。至於法院依第四百二十七條第五項或第四百三十五條第一項規定，以裁定改用通常訴訟程序時，因該訴訟之案情往往較為複雜，性質上不適於由法院逕依職權宣告假執行，故無本款之適用。三、本於票據有所請求之訴訟，依第四百二十七條第二項第六款規定，原則上，不問其金額若干，一律適用簡易程序，故法院就此種訴訟所為被告敗訴判決，依本條第一項第三款之規定，即應依職權宣告假執行，無重複規定之必要。至於命清償票據上債務之訴訟，如適用通常訴訟程序，除符合本條第一項第五款之規定者外，因其案情較為複雜，性質上不適於由法院逕依職權宣告假執行。故原第一項第四款規定，宜予刪除。四、為配合社會經濟之變動，並發揮假執行制度之功能，加強對權利人之保障，本條第一項第五款所定法院應依職權宣告假執行判決之金額或價額之數額宜予提高。爰配合本條第一項第三款之修正，將第五款之金額提高為新臺幣五十萬元。五、民事訴訟費用法相關條文已納入本法規定中，爰配合修正第二項規定。六、關於適用簡易程序之訴訟標的金額或價額之數額，第四百二十七條第七項明定司法院得因情勢需要，於一定範圍內以命令增減之，本條第一項第五款規定之數額係配合第三款規定而修正，爰增訂第三項規定，以求平衡。
+> 釋：一、依家事事件法第三條第五項第十二款、第七十四條、第九十七條準用非訟事件法第三十六條第一項規定，扶養事件屬家事非訟事件，由法院以裁定程序行之，性質上不生判決假執行之問題。如家事訴訟事件與扶養費事件合併請求，經法院依家事事件法第四十二條第二項合併判決者，其中命給付扶養費部分性質上仍屬家事非訟裁定，依同法第四十一條第六項規定，法院於裁判前認有必要時，得依同法第八十五條規定命為適當之暫時處分。法院為本案裁判後，依同法第一百八十六條第一項，該裁判亦得為執行名義，爰配合刪除第一項第二款。二、原條文第二項、第三項未修正。
 
 * 390 關於財產權之訴訟，原告釋明在判決確定前不為執行，恐受難於抵償或難於計算之損害者，法院應依其聲請，宣告假執行。原告陳明在執行前可供擔保而聲請宣告假執行者，雖無前項釋明，法院應定相當之擔保額，宣告供擔保後，得為假執行。
 
@@ -1650,9 +1652,9 @@
 
 > 釋：一、本條係新增。二、關於財產權爭議之調解，如兩造均有成立調解之意願，惟因無法即就具體調解內容獲致結論，而願由調解委員酌定調解條款者，調解委員自宜予以酌定，以杜訟爭，而保護當事人選擇程序之機會，爰增設調解委員經兩造同意得酌定調解條款，並視為當事人已依該調解條款成立調解之規定，俾利適用。
 
-* 416 調解經當事人合意而成立；調解成立者，與訴訟上和解有同一之效力。調解有無效或得撤銷之原因者，當事人得向原法院提起宣告調解無效或撤銷調解之訴。前項情形，原調解事件之聲請人，得就原調解事件合併起訴或提起反訴，請求法院於宣告調解無效或撤銷調解時合併裁判之。並視為自聲請調解時，已經起訴。第五百條至第五百零二條及第五百零六條之規定，於第二項情形準用之。調解不成立者，法院應付與當事人證明書。
+* 416 調解經當事人合意而成立；調解成立者，與訴訟上和解有同一之效力。調解有無效或得撤銷之原因者，當事人得向原法院提起宣告調解無效或撤銷調解之訴。前項情形，原調解事件之聲請人，得就原調解事件合併起訴或提起反訴，請求法院於宣告調解無效或撤銷調解時合併裁判之。並視為自聲請調解時，已經起訴。第五百條至第五百零二條及第五百零六條之規定，於第二項情形準用之。調解不成立者，法院應付與當事人證明書。第五編之一第三人撤銷訴訟程序之規定，於第一項情形準用之。
 
-> 釋：調解有無效或得撤銷之原因，當事人得向原法院提起宣告調解無效或撤銷調解之訴者，就第五百零一條再審程序關於應遵守之程式規定，亦應準用，爰於第四項增訂之。又民法上之無效有絕對無效或相對無效，如認為成立之調解有民法上無效之原因，即一律不受第五百條不變期間之限制，而得隨時提起宣告調解無效之訴者，實有礙法之安定性，故將第四項但書規定刪除，委由法官依具體個案情形，就當事人所主張之無效原因，個別判斷其提起宣告調解無效之訴是否須受第五百條不變期間之限制。
+> 釋：一、原條文第一項至第五項未修正。二、因第一項調解之效力可能及於第三人，第三人之固有權益恐因該調解致受損害，而本條第二項有關宣告調解無效或撤銷調解之訴，又限於調解之當事人始得提起，上開第三人則無適用餘地，為保障其固有權益及程序權，明定準用第五編之一規定，使得提起第三人撤銷訴訟，以為救濟，爰增訂第六項。
 
 * 417 關於財產權爭議之調解，當事人不能合意但已甚接近者，法官應斟酌一切情形，其有調解委員者，並應徵詢調解委員之意見，求兩造利益之平衡，於不違反兩造當事人之主要意思範圍內，以職權提出解決事件之方案。前項方案，應送達於當事人及參加調解之利害關係人。
 
@@ -1670,9 +1672,9 @@
 
 > 釋：「法院」修正為「法官」。
 
-* 420.1 第一審訴訟繫屬中，得經兩造合意將事件移付調解。前項情形，訴訟程序停止進行。調解成立時，訴訟終結。調解不成立時，訴訟程序繼續進行。依第一項規定移付調解而成立者，原告得於調解成立之日起三個月內聲請退還已繳裁判費三分之二。
+* 420.1 第一審訴訟繫屬中，得經兩造合意將事件移付調解。前項情形，訴訟程序停止進行。調解成立時，訴訟終結。調解不成立時，訴訟程序繼續進行。依第一項規定移付調解而成立者，原告得於調解成立之日起三個月內聲請退還已繳裁判費三分之二。第二項調解有無效或得撤銷之原因者，準用第三百八十條第二項規定；請求人並應繳納前項退還之裁判費。
 
-> 釋：為鼓勵當事人成立調解，以迅速息訟止爭，爰參考鄉鎮市調解條例第二十八條第一項有關原告得向法院聲請退還已繳裁判費三分之二之規定，將本條第三項所定原告得聲請退還已繳裁判費之比例提高為三分之二。
+> 釋：一、原條文第一項至第三項未修正。二、訴訟繫屬中經兩造合意移付調解而成立者，如有無效或得撤銷之原因，宜使利用原訴訟程序繼續審判，以保護程序利益及維護程序經濟，故明定準用第三百八十條第二項之規定，當事人得請求依原訴訟程序繼續審判，為請求之當事人並應繳納依本條第三項規定已退還之裁判費，爰增訂第四項。
 
 * 421 法院書記官應作調解程序筆錄，記載調解成立或不成立及期日之延展或訴訟之辯論。但調解委員行調解時，得僅由調解委員自行記錄調解不成立或延展期日情形。第四百十七條之解決事件之方案，經法官當場宣示者，應一併記載於筆錄。調解成立者，應於十日內以筆錄正本，送達於當事人及參加調解之利害關係人。第二百十二條至第二百十九條之規定，於第一項、第二項筆錄準用之。
 
@@ -1698,9 +1700,9 @@
 
 > 釋：「調解推事」、「調解人」修正為「法官」、「調解委員」。
 
-* 427 關於財產權之訴訟，其標的之金額或價額在新臺幣五十萬元以下者，適用本章所定之簡易程序。下列各款訴訟，不問其標的金額或價額一律適用簡易程序：一、因建築物或其他工作物定期租賃或定期借貸關係所生之爭執涉訟者。二、雇用人與受雇人間，因僱傭契約涉訟，其僱傭期間在一年以下者。三、旅客與旅館主人、飲食店主人或運送人間，因食宿、運送費或因寄存行李、財物涉訟者。四、因請求保護占有涉訟者。五、因定不動產之界線或設置界標涉訟者。六、本於票據有所請求而涉訟者。七、本於合會有所請求而涉訟者。八、因請求利息、紅利、租金、贍養費、退職金或其他定期給付涉訟者。九、因動產租賃或使用借貸關係所生之爭執涉訟者。十、因第一款至第三款、第六款至第九款所定請求之保證關係涉訟者。不合於前項規定之訴訟，得以當事人之合意，適用簡易程序，其合意應以文書證之。不合於第一項及第二項之訴訟，法院適用簡易程序，當事人不抗辯而為本案之言詞辯論者，視為已有前項之合意。第二項之訴訟，案情繁雜或其訴訟標的金額或價額逾第一項所定額數十倍以上者，法院得依當事人聲請，以裁定改用通常訴訟程序，並由原法官繼續審理。前項裁定，不得聲明不服。第一項所定數額，司法院得因情勢需要，以命令減至新臺幣二十五萬元，或增至七十五萬元。
+* 427 關於財產權之訴訟，其標的之金額或價額在新臺幣五十萬元以下者，適用本章所定之簡易程序。下列各款訴訟，不問其標的金額或價額一律適用簡易程序：一、因建築物或其他工作物定期租賃或定期借貸關係所生之爭執涉訟者。二、雇用人與受雇人間，因僱傭契約涉訟，其僱傭期間在一年以下者。三、旅客與旅館主人、飲食店主人或運送人間，因食宿、運送費或因寄存行李、財物涉訟者。四、因請求保護占有涉訟者。五、因定不動產之界線或設置界標涉訟者。六、本於票據有所請求而涉訟者。七、本於合會有所請求而涉訟者。八、因請求利息、紅利、租金、退職金或其他定期給付涉訟者。九、因動產租賃或使用借貸關係所生之爭執涉訟者。十、因第一款至第三款、第六款至第九款所定請求之保證關係涉訟者。不合於前二項規定之訴訟，得以當事人之合意，適用簡易程序，其合意應以文書證之。不合於第一項及第二項之訴訟，法院適用簡易程序，當事人不抗辯而為本案之言詞辯論者，視為已有前項之合意。第二項之訴訟，案情繁雜或其訴訟標的金額或價額逾第一項所定額數十倍以上者，法院得依當事人聲請，以裁定改用通常訴訟程序，並由原法官繼續審理。前項裁定，不得聲明不服。第一項所定數額，司法院得因情勢需要，以命令減至新臺幣二十五萬元，或增至七十五萬元。
 
-> 釋：一、為配合小額程序制度之增設，乃調整簡易程序之適用範圍。二、為保障當事人程序上之權益，乃放寬當事人聲請改用通常訴訟程序之條件。
+> 釋：一、原條文第一項、第三項至第七項未修正。二、家事事件法第三條第五項第一款規定給與贍養費事件為戊類家事非訟事件，依同法第七十四條規定，應適用家事非訟程序之規定，爰配合修正第二項第八款。
 
 * 427.1 同一地方法院適用簡易程序審理之事件，其事務分配辦法由司法院定之。
 
@@ -1716,7 +1718,9 @@
 
 * 430 言詞辯論期日之通知書，應表明適用簡易訴訟程序，並記載當事人務於期日攜帶所用證物及偕同所舉證人到場。
 
-* 431 當事人於其聲明或主張之事實或證據，以認為他造非有準備不能陳述者為限，應於期日前提出準備書狀，並得直接通知他造；其以言詞為陳述者，由法院書記官作成筆錄，送達於他造。
+* 431 當事人於其聲明或主張之事實或證據，以認為他造非有準備不能陳述者為限，應於期日前提出準備書狀或答辯狀，並以繕本或影本直接通知他造；其以言詞為陳述者，由法院書記官作成筆錄，送達於他造。
+
+> 釋：民事訴訟法第二百六十五條第一項、第二百六十七條第一項規定，通常訴訟程序之當事人提出準備書狀或答辯狀應以繕本或影本直接通知他造，毋庸提出於法院送達他造當事人。考量簡易訴訟事件簡便及迅速之程序目的，自無使當事人提出書狀於法院，再由法院送達他造之必要，爰修正本條。
 
 * 432 當事人兩造於法院通常開庭之日，得不待通知，自行到場，為訴訟之言詞辯論。前項情形，其起訴應記載於言詞辯論筆錄，並認當事人已有第四百二十七條第三項適用簡易程序之合意。
 
@@ -2252,9 +2256,9 @@
 
 > 釋：一、第一項本文「左列」修正為「下列」。二、為期假扣押請求之內容明確，以便於法院審酌，假扣押之聲請除應表明其請求外，尚應表明其請求保全之金額、權利及其請求權發生之原因事實等事項，爰修正第一項第二款。
 
-* 526 請求及假扣押之原因，應釋明之。前項釋明如有不足，而債權人陳明願供擔保或法院認為適當者，法院得定相當之擔保，命供擔保後為假扣押。請求及假扣押之原因雖經釋明，法院亦得命債權人供擔保後為假扣押。債權人之請求係基於家庭生活費用、扶養費、贍養費、夫妻剩餘財產差額分配者，前項法院所命供擔保之金額不得高於請求金額之十分之一。
+* 526 請求及假扣押之原因，應釋明之。前項釋明如有不足，而債權人陳明願供擔保或法院認為適當者，法院得定相當之擔保，命供擔保後為假扣押。請求及假扣押之原因雖經釋明，法院亦得命債權人供擔保後為假扣押。夫或妻基於剩餘財產差額分配請求權聲請假扣押者，前項法院所命供擔保之金額不得高於請求金額之十分之一。
 
-> 釋：一、依原第二項規定，債權人得供擔保以代釋明，惟債權人聲請假扣押，應使法院信其請求及假扣押之原因大致為正當，故仍應盡其釋明責任。然其釋明如有不足，為補強計，於債權人陳明就債務人可能遭受之損害願供擔保並足以補釋明之不足，或於法院認以供擔保可補釋明之不足並為適當時，法院均可斟酌情形定相當之擔保，命債權人供擔保後為假扣押，爰修正第二項。二、按法院於假扣押命供擔保時，幾乎一律要求所請求金額三分之一之擔保金，而長期為婚姻生活犧牲、貢獻而處於經濟上弱勢之家事勞動者，幾乎無力提供，故特規定其等於請求家庭生活費用、扶養費、贍養費、夫妻剩餘財產差額分配之訴時，法院應降低所命供擔保金額之門檻，不得高於請求金額之十分之一，以免因程序規定而損及當事人實體利益，爰增列第四項規定，以保障其請求權。三、原第四項規定，移列至第五項。
+> 釋：一、原條文第一項至第三項未修正。二、家事事件法第三條第五項規定給付家庭生活費用事件、扶養事件、給與贍養費事件為戊類家事非訟事件，依同法第七十四條、第八十五條規定，應適用家事非訟程序之規定，法院得於本案裁定確定前，為適當之暫時處分，不適用假扣押之規定。又現行規定係為減輕夫妻聲請假扣押時提供擔保金之負擔，不包括債權人代位夫或妻行使夫妻剩餘財產差額分配請求權而為假扣押聲請，應予明定，爰配合修正第四項。
 
 * 527 假扣押裁定內，應記載債務人供所定金額之擔保或將請求之金額提存，得免為或撤銷假扣押。
 
@@ -2418,303 +2422,359 @@
 
 * 567 公示催告程序，因提出證券或其他原因未為除權判決而終結者，法院應依職權以裁定撤銷禁止支付之命令。禁止支付命令之撤銷，應準用第五百六十一條之規定公告之。
 
-* 568 婚姻無效或撤銷婚姻，與確認婚姻成立或不成立及離婚或夫妻同居之訴，專屬夫妻之住所地或夫、妻死亡時住所地之法院管轄。但訴之原因事實發生於夫或妻之居所地者，得由各該居所地之法院管轄。夫妻之住所地法院不能行使職權或在中華民國無住所或其住所不明者，準用第一條第一項中段及第二項之規定。夫或妻為中華民國人，不能依前二項規定，定管轄之法院者，由中央政府所在地之法院管轄之。
+* 568 （刪除）
 
-> 釋：第二項準用「第一條第一項後段」部分，於九十二年一月十四日修正後，變更為該條項之中段，爰配合修正。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 569 由夫或妻起訴者，以其配偶為被告。由第三人起訴者，以夫妻為共同被告。但撤銷婚姻之訴，其夫或妻死亡者，得以生存者為被告。以一人同時與二人以上結婚為理由之婚姻無效之訴，由結婚人起訴者，以其餘結婚人為被告；由第三人起訴者，以結婚人全體為共同被告。前項起訴，結婚人一方中有死亡者，以生存之結婚人為被告。
+* 569 （刪除）
 
-> 釋：一、第一、二項不修正。二、修正後之民法第九百八十八條規定一人同時與二人以上結婚者，無效。此種婚姻無效訴訟之當事人，現行法尚無適當條文，可資適用，且此種訴訟裁判之結果，對於結婚人全體不能有所歧異，必須一同起訴或應訴，爰增設第三、四項。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 570 未成年之夫或妻，就婚姻無效或確認婚姻不成立之訴，亦有訴訟能力。
+* 570 （刪除）
 
-* 571 婚姻事件，夫或妻為受監護宣告之人者，應由其監護人代為訴訟行為；如監護人即係其配偶或為起訴之第三人時，法院應依利害關係人之聲請或依職權為受監護宣告之人選任特別代理人，代為訴訟行為。監護人違反受監護人之利益而起訴者，法院應以裁定駁回之。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、配合修正後民法用語及將監護改由法院監督之規定，作文字修正。二、依民法第一千一百十三條規定準用第一千零九十八條第二項規定，監護人於監護權限內，為受監護人之法定代理人。如監護人即係其配偶時，或監護人以夫妻為被告提起撤銷婚姻事件時，法院應依利害關係人之聲請或依職權為受監護宣告之人選任特別代理人，代為訴訟行為，作為受監護人之保護機制，爰修正第一項規定。三、又民法修正後，已無由親屬會議指定之人，代為訴訟行為之規定，爰將原第一項有關親屬會議規定及原第二項規定刪除。四、於個案具體事實中，若監護人代婚姻事件中受監護人之夫或妻為訴訟行為時，其當本於為受監護人之最佳利益而為訴訟行為，始符合為受監護人設置監護人之本旨，此乃當然之理。如監護人違反上開原則而起訴時，法院應以裁定駁回之，爰增訂第二項規定。
+* 571 （刪除）
 
-* 571.1 受輔助宣告之人於婚姻事件有訴訟能力，為訴訟行為時，無須經輔助人同意。受輔助宣告之人為訴訟行為者，受訴法院之審判長應依聲請，選任律師為其訴訟代理人，於認為必要時，並得依職權為之選任。選任訴訟代理人之裁定，並應送達於該訴訟代理人。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、本條新增。二、受輔助宣告人在婚姻事件應與身分行為相同，須親自為之。未成年之夫或妻，就婚姻無效或確認婚姻不成立之訴，亦有訴訟能力，基於相同法理，受輔助宣告之人於婚姻事件，仍應有訴訟能力，爰設第一項規定。三、受輔助宣告之人固仍有訴訟能力，惟其或因精神障礙或其他心智缺陷，辨識能力顯有不足，為保護其利益起見，仿本法第五百八十五條第一項之規定，爰設第二項規定。四、又關於法院依本條第一項選任律師為受輔助宣告之人之訴訟代理人，應給與律師之相當報酬，因本法第七十七條之二十五業已明文規定，於本條即無再重複規定之必要，併此敘明。五、受訴法院之審判長選任律師為受輔助宣告之人之訴訟代理人，應以裁定行之，此項裁定，除向當事人送達外，應併送達於被選任為訴訟代理人之律師，爰設第三項規定。
+* 571.1 （刪除）
 
-* 572 婚姻無效、確認婚姻成立或不成立、撤銷婚姻、離婚或夫妻同居之訴，得合併提起，或於第一審或第二審言詞辯論終結前，為訴之變更、追加或提起反訴。依前項規定得為訴之變更、追加或提起反訴者，不得另行起訴，其另行起訴者，法院應以裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。受移送之法院不得以違背專屬管轄為理由，移送於他法院。非婚姻事件之訴，以夫妻財產之分配或分割、返還財物、給付家庭生活費用或贍養費或扶養之請求，或由訴之原因、事實所生損害賠償之請求為限，得與第一項之訴合併提起，或於第一審或第二審言詞辯論終結前，為訴之追加或提起反訴；其另行起訴者，法院得以裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、為彌補婚姻事件中，另行起訴者此項缺失，並兼顧起訴原告之除斥期間利益，爰增設第二項。二、原條文第二項改列為第三項。有關給付膽養費之訴訟，與婚姻事件有密切之關係，亦宜與婚姻事件同時解決。爰於第三項所定得與婚姻事件合併提起之請求中，增列「給付贍養費」。
+* 572 （刪除）
 
-* 572.1 撤銷婚姻或離婚之訴，當事人得於第一審或第二審言詞辯論終結前，附帶請求法院於認原告之訴為有理由時，並定對於未成年子女權利義務行使負擔之內容及方法。前項情形，法院亦得依職權定之。但於裁判前，應使當事人有陳述意見之機會。夫妻均不適合行使權利時，法院得選定適當之人為子女之監護人。但應先徵詢被選定人之意見。前三項情形，法院為裁判時，不受當事人聲明事項之拘束。前四項規定，於婚姻無效、確認婚姻成立或不成立或夫妻同居之訴準用之。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、本條係新增。二、當事人提起撤銷婚姻或離婚訴訟之情形，如嚴格限制當事人須俟撤銷婚姻或離婚判決確定後再另案聲請法院裁定，非但增加當事人及法院之勞費，同時亦使當事人與法院無法於撤銷婚姻或離婚訴訟中，併就未成年子女權利義務行使或負擔之問題通盤考量，自嫌未洽。爰增訂之。
+* 572.1 （刪除）
 
-* 573 提起婚姻無效、撤銷婚姻或離婚之訴，因無理由被駁回者，受該判決之原告，不得援以前依訴之合併、變更或追加所得主張之事實，提起獨立之訴。以反訴提起前項之訴，因無理由被駁回者，受該判決之被告，不得援以前得作反訴原因主張之事實，提起獨立之訴。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 574 關於認諾效力之規定，於婚姻事件不適用之。關於捨棄效力之規定，於婚姻無效、婚姻成立或不成立之訴，不適用之。關於訴訟上自認及不爭執事實之效力之規定，在撤銷婚姻、離婚或夫妻同居之訴，於撤銷婚姻、離婚或拒絕同居之原因、事實，不適用之；在婚姻無效或確認婚姻成立或不成立之訴，於婚姻無效或不成立及婚姻有效或成立之原因、事實，不適用之。關於認諾、捨棄、訴訟上自認及不爭執事實之效力之規定，於第五百七十二條之一之事件，不適用之。婚姻事件，當事人得合意不公開審判，並向受訴法院陳明。
+* 573 （刪除）
 
-> 釋：一、原條文第一項未修正，改列修正後第一項前段。第二項未修正。第三、四項新增。二、婚姻事件常涉及當事人隱私及家庭秘密，未必與公益有關，性質上不宜在公開法庭審理，應准許當事人合意不公開審判。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 575 法院因維持婚姻或確定婚姻是否無效或不成立，得斟酌當事人所未提出之事實。前項事實，於裁判前，應令當事人有辯論之機會。
+* 574 （刪除）
 
-* 575.1 第五百七十二條之一之事件，法院得斟酌當事人所未提出之事實，並應依職權調查證據。前項事件，法院為裁判前，得徵詢主管機關或社會福利機構之意見，或囑託其進行訪視、提出調查報告及建議。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、本條係新增。二、當事人提起撤銷婚姻、離婚等訴訟時，為使當事人及法院於該訴訟中，能併就未成年子女權利義務行使或負擔問題作通盤考量，始准由當事人於該訴訟中附帶請求，惟因其本質上仍屬非訟事件，為保障未成年子女之利益，仍應採職權探知之非訟法理。三、未成年子女之教養、保護政府應成立專責之主管機關或督導社會福利機構為之，作為衡量子女最佳利益之參考。爰於第二項予以明定，以資依據。
+* 575 （刪除）
 
-* 576 當事人或法定代理人本人不從法院之命到場者，準用第三百零三條之規定。但不得拘提之。法院得使受命法官或受託法官訊問本人。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：第二項「推事」修正為「法官」。
+* 575.1 （刪除）
 
-* 577 離婚之訴及夫妻同居之訴，於起訴前，應經法院調解。前項調解，準用第四百零三條至第四百二十六條之規定。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 578 離婚之訴及夫妻同居之訴，法院認當事人有和諧之望者，得以裁定命於六個月以下之期間內，停止訴訟程序。但以一次為限。
+* 576 （刪除）
 
-* 579 法院對於未成年子女權利義務之行使或負擔，得依聲請或依職權命為必要之假處分。法院命為前項假處分時，準用第五百七十五條之一之規定。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：對於未成年子女權利義務行使，如有急迫情勢不立即定暫時狀態，將使子女安全或教養受到影響，故法院得依聲請或依職權命為必要之假處分，以保護未成年子女之權益。
+* 577 （刪除）
 
-* 580 夫或妻於判決確定前死亡者，關於本案視為訴訟終結。但第三人提起撤銷婚姻之訴後，僅夫或妻死亡者，不在此限。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 581 婚姻事件之原告，於判決確定前死亡者，有權提起同一訴訟之他人，得於其死亡後三個月內承受訴訟。
+* 578 （刪除）
 
-* 582 就婚姻無效、撤銷婚姻或確認婚姻成立或不成立之訴所為之判決，對於第三人亦有效力。以重婚為理由，提起婚姻無效之訴被駁回者，其判決對於當事人之前配偶，以已參加訴訟為限，始有效力。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、第一項不修正。二、修正前民法第九百九十二條對於結婚違反第九百八十五條重婚之規定者，僅規定得由利害關係人向法院請求撤銷之。修正後民法第九百八十八條規定結婚違反重婚之規定者無效，並將第九百九十二條刪除，是已不得以重婚為理由提起撤銷婚姻之訴，爰將之修正為「以重婚為理由提起婚姻無效之訴」，以期配合。
+* 579 （刪除）
 
-* 582.1 依第五百七十二條第三項之規定，就夫妻財產之分配或分割或贍養費之請求，與該條第一項之訴合併提起，或為訴之追加或提起反訴者，當事人對於第一審或第二審之終局判決，僅就該條第一項之訴提起上訴者，對於原告就夫妻財產之分配或分割或贍養費之請求，於原審勝訴部分，視為一併提起上訴。第五百七十二條之一事件，當事人對於第一審或第二審之終局判決，僅就本案部分提起上訴者，視為附帶請求部分已提起上訴。當事人或利害關係人僅就附帶請求部分之裁判聲明不服者，適用關於抗告程序之規定。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、本條係新增。二、第五百七十二條之一事件，第一、二審法院為判決後，如何聲明不服，應適用上訴或抗告程序，滋生疑義，有明文加以規定之必要。三、規定當事人僅就本案部分提起上訴者，視為附帶請求部分已提起上訴。四、因附帶請求部分係為保護子女利益而設，必須訊速妥適處理，故宜適用抗告程序為之，特於第二項明文加以規定，以杜爭議。
+* 580 （刪除）
 
-* 583 收養無效、終止收養無效或撤銷收養，與確認收養關係成立或不成立，及終止收養關係或撤銷終止收養之訴，專屬養父母之住所地或其死亡時住所地之法院管轄。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：配合修正後民法第一千零八十條之二、第一千零八十條之三分別增訂終止收養無效及撤銷終止收養之規定，爰修正本條。
+* 581 （刪除）
 
-* 584 前條之訴，養子女雖不能獨立以法律行為負義務者，亦有訴訟能力。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 585 未成年之養子女為訴訟行為者，受訴法院之審判長應依聲請，選任律師為其訴訟代理人，於認為必要時，並得依職權為之選任。選任訴訟代理人之裁定，並應送達於該訴訟代理人。
+* 582 （刪除）
 
-> 釋：本法第七十七條之二十五業已明文規定，法院或審判長依法律規定，為當事人選任律師為訴訟代理人，律師報酬應由法院或審判長酌定之，則本條第二項規定，即屬重複，應予刪除。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 586 養父母與養子女間之訴訟，如養子女無行為能力，而養父母為其法定代理人者，應由本生父母代為訴訟行為；無本生父母者，由本生父母方面親屬會議所指定之人代為訴訟行為。
+* 582.1 （刪除）
 
-* 587 終止收養關係之訴，於起訴前，應經法院調解。
+> 釋：一、本條刪除。二、家事事件法第三編第二章就婚姻事件程序已有整體規範，爰配合刪除本條。
 
-* 588 第五百八十三條之訴，除別有規定外，準用婚姻事件程序之規定。
+* 583 （刪除）
 
-* 589 否認或認領子女、否認推定生父之訴，與認領無效或撤銷認領之訴，及就母再婚後所生子女確定其父之訴，專屬子女住所地或其死亡時住所地之法院管轄。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：配合修正後民法第一千零六十三條及大法官釋字第五八七號解釋，增列子女亦得提起否認推定生父之訴，爰修正本條增列該訴之管轄規定。
+* 584 （刪除）
 
-* 589.1 否認子女之訴，由夫起訴者，以妻及子女為共同被告；由妻起訴者，以夫及子女為共同被告。前項起訴，妻或夫死亡者，以子女為被告。子女否認推定生父之訴，以法律推定之生父為被告。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：配合修正後民法第一千零六十三條，規定子女提起否認法律推定生父之訴之被告適格，參照大法官釋字第五八七號解釋，應許子女以法律推定之生父為被告，提起否認生父之訴之意旨，明定子女否認生父之訴，應以法律推定之生父為被告，爰增訂第三項規定。
+* 585 （刪除）
 
-* 590 否認子女之訴，夫妻之一方於法定起訴期間內或期間開始前死亡者，繼承權被侵害之人得提起之。依前項規定起訴者，應自被繼承人死亡時起，於一年內為之。夫妻之一方於提起否認子女之訴後死亡者，繼承權被侵害之人得承受其訴訟。前三項規定，於否認推定生父之訴，準用之。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、原第二項規定起訴期間六個月之起算時點，係自被繼承人死亡時起算，惟繼承權被侵害之人，多於繼承開始後，始得瞭解他人侵害繼承權之事實，六個月期間，實屬過短，爰參照民法第一千零六十三條規定，將本項起訴期間延長為一年。二、否認推定生父之訴，如子女死亡者，與否認子女之訴夫妻之一方死亡者，有共通之處，爰增訂第四項，準用第一項至第三項規定。
+* 586 （刪除）
 
-* 590.1 生父於認領子女之訴起訴後死亡者，由其繼承人承受訴訟；無繼承人者，由社會福利主管機關承受訴訟。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-> 釋：一、本條新增。二、生父於認領子女之訴起訴後死亡，應由繼承人承受訴訟，如無繼承人時，為免認領子女之訴延宕，致影響應受認領子女利益，爰參照修正後民法第一千零六十七條第二項規定，明文規定無繼承人時，由社會福利主管機關承受訴訟，以保護子女利益。
+* 587 （刪除）
 
-* 591 就母再婚後所生子女確定其父之訴，母之配偶及前配偶互為被告。由子女或母起訴者，以母之配偶及前配偶為共同被告；母之配偶或前配偶死亡者，以生存者為被告。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 592 宣告停止親權或撤銷其宣告之訴，專屬行親權人或曾行親權人住所地之法院管轄。
+* 588 （刪除）
 
-* 593 撤銷停止親權宣告之訴，以現行親權之人或監護人為被告。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 594 關於認諾及訴訟上自認或不爭執事實之效力之規定，於第五百八十九條及第五百九十二條之訴，不適用之。
+* 589 （刪除）
 
-* 595 第五百八十九條及第五百九十二條之訴，法院得斟酌當事人所未提出之事實。前項事實，於裁判前應令當事人有辯論之機會。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 596 第五百六十八條第一項但書、第二項及第三項、第五百七十一條、第五百七十一條之一、第五百七十二條第三項、第五百七十二條之一、第五百七十四條第三項、第四項、第五百七十五條之一、第五百七十六條、第五百七十九條至第五百八十一條及第五百八十二條第一項之規定，於第五百八十九條及第五百九十二條之訴準用之。但認領子女之訴，由生母或其他法定代理人起訴，因無理由被駁回者，其判決對於非婚生子女，不準用第五百八十二條第一項之規定。第五百八十四條至第五百八十六條之規定，於第五百八十九條之訴準用之。第五百七十二條第一項及第五百七十三條之規定，於認領無效或撤銷認領之訴準用之。
+* 589.1 （刪除）
 
-> 釋：本法配合修正後民法增加輔助宣告規定，增列第五百七十一條之一規定，且於第五百八十九條及第五百九十二條之訴有準用之必要，爰修正第一項，增列準用第五百七十一條之一規定。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 597 監護宣告之聲請，專屬應受監護宣告之人住所地之法院管轄。第五百六十八條第一項但書及第二項之規定，於前項聲請準用之。
+* 590 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 598 監護宣告之聲請，應表明其原因、事實及證據。
+* 590.1 （刪除）
 
-> 釋：配合修正後民法第十四條第一項規定，修正文字。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 599 法院得於監護宣告之程序開始前，命聲請人提出診斷書。
+* 591 （刪除）
 
-> 釋：配合修正後民法第十四條第一項規定，修正文字。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 600 監護宣告之程序，不得公開行之。
+* 592 （刪除）
 
-> 釋：配合修正後民法第十四條第一項規定，修正文字。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 601 法院就監護宣告之聲請，應斟酌聲請人所表明之事實及證據，依職權為必要之調查。調查費用，如聲請人未預納者，由國庫墊付。
+* 593 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 602 法院應於鑑定人前訊問應受監護宣告之人。但有礙難訊問之情形或恐有害其健康者，不在此限。前項訊問，得使受託法官為之。
+* 594 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 603 監護之宣告，非就應受監護宣告之人之精神或心智狀況訊問鑑定人後，不得為之。
+* 595 （刪除）
 
-> 釋：配合修正後民法第十四條第一項用語，酌予修正文字。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 604 監護宣告之裁定，應同時選定監護人及指定會同開具財產清冊之人，並附理由。前項裁定，應送達於聲請人、受監護宣告之人、法院選定之監護人及法院指定會同開具財產清冊之人；受監護宣告之人另有法定代理人者，並應送達之。
+* 596 （刪除）
 
-> 釋：一、依修正後民法第一千一百十一條第一項規定，法院為監護之宣告時，應依職權就配偶、四親等內之親屬、最近一年有同居事實之其他親屬、主管機關、社會福利機構或其他適當之人選定一人或數人為監護人，並同時指定會同開具財產清冊之人，爰修正第一項及第二項文字。二、配合修正後民法第一千一百十一條刪除法定監護人之規定，並另規定法院應依職權為受監護宣告之人選定監護人，爰將第二項「依法律應為監護人之人」，修正為「法院選定之監護人」。又修正後民法第一千一百十一條規定，法院應另指定會同開具財產清冊之人，為使法院選定之監護人及指定會同開具財產清冊之人，均能收受送達。爰將本項之「或」修正為「及」。另受監護宣告之人非必有法定代理人，爰將第二項法定代理人之規定，修正為如有法定代理人時，並應向其送達。
+> 釋：一、本條刪除。二、家事事件法第三編第三章就親子關係事件程序已有整體規範，爰配合刪除本條。
 
-* 605 前條第一項之裁定，自法院選定之監護人受送達或當庭受告知時發生效力。前項裁定生效後，法院應以相當之方法，將該裁定要旨公告之。
+* 597 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、本條原第一項規定之「法定代理人」，應係指未成年人之監護宣告，未成年人之監護宣告法院所選定之監護人與法定代理人非同一人時，以法院選定之監護人優先，故應以法院選定之監護人之送達為生效之始期，爰刪除向法定代理人為送達之規定。三、修正前禁治產制度，係由法定監護人為禁治產人之監護人，修正後改由法院選定監護人任之，無法定監護人之規定。監護宣告裁定生效前，尚無監護人，為符合民法保護受監護宣告之人之精神，迅速照護受監護人之權益，宜當庭告知選定監護人，並記明筆錄，使宣告監護裁定及早發生效力，如當庭告知與送達不一致，以先生效者為準，爰修正第一項規定。四、又第一項裁定規定生效時點因送達或當庭告知而有不同，爰配合修正第二項規定。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 606 法院於監護宣告前，因保護應受監護宣告之人之身體或財產，得命為必要之處分；於宣告後，認為必要時亦同。前項處分，法院得依聲請或依職權撤銷之。關於第一項處分及撤銷處分之裁定，得為抗告。
+* 598 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、受監護宣告之人之身體或財產，其一可能受到侵害時，即得命為必要之處分，爰將第一項之「及」修正為「或」。三、第一項之處分，法院既得依職權為之，自亦得依職權撤銷之，爰修正第二項規定。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 607 駁回監護宣告聲請之裁定，得為抗告。第五百九十九條至第六百零一條之規定，於抗告法院之程序準用之。
+* 599 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 608 關於聲請監護宣告程序之費用，如宣告監護者，由受監護宣告之人負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
+* 600 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正第一項文字。二、第二項未修正。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 609 宣告監護之裁定，不得抗告。依民法規定得聲請監護宣告之人，得向曾就監護宣告之聲請為裁判之地方法院，提起撤銷監護宣告之訴。
+* 601 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正文字。二、為使文義更明確，將第二項文字酌予調整。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 609.1 對於選定監護人及指定會同開具財產清冊之人之裁定，得為抗告。抗告法院為裁定前，應使抗告人、受監護宣告之人、法定代理人、選定監護人及指定會同開具財產清冊之人有陳述意見之機會。抗告法院認抗告有理由者，應自為裁定。對於抗告法院之裁定，不得再為抗告。
+* 602 （刪除）
 
-> 釋：一、本條新增。二、法院選定監護人及指定會同開具財產清冊之人之裁定，因影響關係人之權益，宜賦予救濟之機會，爰設第一項規定。又得為抗告之人，自以受裁定之當事人及經法院選定之監護人及指定會同開具財產清冊之人為限，乃屬當然。三、依本法第六百零五條第一項規定，監護宣告、選定監護人及指定會同開具財產清冊之人之裁定，自法院選定之監護人受送達或當庭受告知時即生效力。本法第四百九十一條第一項則規定「抗告，除別有規定外，無停止執行之效力。」是對於選定監護人及指定會同開具財產清冊之人之裁定提起抗告者，在抗告審審理期間，第一審法院選定之監護人及指定會同開具財產清冊之人，仍應依法執行相關職務。四、為保障利害關係人之程序權，抗告法院於裁定前，應使抗告人、受監護宣告之人、法定代理人、選定監護人及指定會同開具財產清冊之人，均有陳述意見之機會，爰設第二項規定。五、為免程序拖延，致法院選定之監護人及指定會同開具財產清冊之人未能及時執行職務，抗告法院認抗告有理由，為廢棄或變更時，應自為裁定，爰設第三項規定。且對於抗告法院之裁定，不得再為抗告，爰設第四項規定。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 610 撤銷監護宣告之訴，以聲請監護宣告之人為被告。由聲請監護宣告之人起訴或該聲請人死亡者，以監護人為被告；如該聲請人為監護人者，以受監護宣告之人為被告。
+* 603 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正文字。二、撤銷監護宣告之訴，原規定以聲請監護宣告之人為被告，如聲請監護宣告之人提起撤銷監護宣告之訴或死亡時，即不能為被告，故明定以監護人為被告，但如聲請人即為監護人時，亦不能為被告，故改以受監護宣告之人為被告，爰修正第二項規定。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 611 撤銷監護宣告之訴，應於三十日之不變期間內提起之。前項期間，於受監護宣告之人自其知悉受監護宣告時起算，於他人自該裁定發生效力時起算。
+* 604 （刪除）
 
-> 釋：配合修正後民法第十四條第一項規定，修正文字。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 612 撤銷監護宣告之訴，受監護宣告之人有訴訟能力。第五百八十五條之規定，於受監護宣告之人為訴訟行為者準用之。
+* 605 （刪除）
 
-> 釋：配合修正後民法第十四條第一項規定，修正文字。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 613 撤銷監護宣告之訴，不得合併提起他訴，或於其程序為訴之追加或提起反訴。
+* 606 （刪除）
 
-> 釋：配合修正後民法第十四條第一項規定，修正文字。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 614 受監護宣告之人於判決確定前死亡者，關於本案視為訴訟終結。
+* 607 （刪除）
 
-> 釋：配合修正後民法第十四條第一項規定，修正文字。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 615 聲請監護宣告之人為被告，於判決確定前死亡者，由監護人承受訴訟。第五百八十一條、第五百九十四條、第五百九十五條、第六百零二條及第六百零三條之規定，於撤銷監護宣告之訴準用之。
+* 608 （刪除）
 
-> 釋：一、原條文移列第二項，並配合修正後民法第十四條第一項規定，修正文字。二、新增第一項。按如聲請監護宣告之人為被告，在訴訟繫屬中死亡，非屬本法第六百十四條之情形。若依一般法理，由其繼承人承受訴訟，自非妥適，爰明定由監護人承訴訟。惟若為被告之監護宣告聲請人即監護人死亡時，依民法第一千一百零六條第一項第一款規定，法院依聲請或依職權選定新監護人，訴訟程序應於新監護人承受訴訟前當然停止。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 616 撤銷監護宣告之訴，法院認為有理由者，應以判決撤銷宣告監護之裁定。前項情形，法院於判決確定前，因保護受監護宣告之人之身體或財產，得命為必要之處分。第六百零六條第二項及第三項之規定，於前項處分準用之。
+* 609 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正第一項及第二項文字。二、第三項未修正。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 616.1 選定監護人及指定會同開具財產清冊之人之裁定，於撤銷監護宣告判決確定時，自始失其效力。
+* 609.1 （刪除）
 
-> 釋：一、本條新增。二、撤銷監護宣告裁定之判決確定時，該裁定因撤銷而自始失其效力，因監護宣告而選定監護人及指定會同開具財產清冊之人之裁定，當然失所附麗，溯及失效，爰設本條，以期明確。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 617 在撤銷監護宣告判決確定前，監護人所為之行為，不失其效力。在撤銷監護宣告判決確定前，受監護宣告之人所為之行為，不得本於宣告監護之裁定，而主張無效。
+* 610 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正文字。二、撤銷監護宣告判決確定後，原監護宣告裁定因被撤銷而自始失其效力，修正前第一項條文未明文規定以撤銷監護宣告判決確定為時點，易生爭議，爰修正明定之。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 618 撤銷監護宣告判決確定後，應由第一審受訴法院公告其要旨。
+* 611 （刪除）
 
-> 釋：一、配合修正後民法第十四條第一項規定，修正文字。二、按宣告監護之裁定生效後，依本法第六百零五條第二項規定，法院應以相當之方法，將該裁定要旨公告之，然若該裁定自始非當，經判決確定撤銷後，自亦應公告撤銷監護宣告之判決要旨，以保障受監護宣告之人之權益，爰修正本條。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 619 依民法規定得聲請監護宣告之人，於監護宣告之原因消滅後，得聲請撤銷監護宣告。
+* 612 （刪除）
 
-> 釋：配合修正後民法第十四條第二項規定，修正文字。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 620 撤銷監護宣告之聲請，專屬受監護宣告之人住所地之地方法院管轄。第五百六十八條第一項但書及第二項之規定，於前項聲請準用之。撤銷監護宣告之聲請，不能依前二項規定定其管轄法院者，得向曾就監護宣告之聲請為裁判之地方法院為之。
+* 613 （刪除）
 
-> 釋：一、配合修正後民法第十四條第二項規定，修正第一項及第三項文字。另為使文義更明確，將第三項文字酌予調整。二、第二項未修正。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 621 第五百九十八條至第六百零三條之規定，於撤銷監護宣告之聲請準用之。
+* 614 （刪除）
 
-> 釋：一、配合修正後民法第十四條第二項規定，修正文字。二、本條係規範單純為撤銷監護宣告之聲請，至修正後民法第十四條第四項規定之情形，另增訂第六百二十四條之五規定規範之，併此敘明。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 622 關於聲請撤銷監護宣告程序之費用，如撤銷監護宣告者，由受監護宣告之人負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
+* 615 （刪除）
 
-> 釋：一、配合修正後民法第十四條第二項規定，修正第一項文字。二、第二項未修正。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 623 撤銷監護宣告之裁定，應附理由。前項裁定，應送達於聲請人、受監護宣告之人、法院選定之監護人及法院指定會同開具財產清冊之人；受監護宣告之人另有法定代理人者，並應送達之。選定監護人及指定會同開具財產清冊之人之裁定，於撤銷監護宣告裁定確定時，嗣後失其效力。第六百十八條之規定，於第一項裁定準用之。
+* 616 （刪除）
 
-> 釋：一、配合修正後民法第十四條第二項規定，修正第一項及第二項文字。第二項並增列受監護宣告之人、法院選定之監護人、法院指定會同開具財產清冊之人及受監護宣告之人，如另有法定代理人，該法定代理人為應受送達之人。又對於撤銷監護宣告之裁定，並未明文規定不得抗告，依本法第四百八十二條規定，自得提起抗告，併予敘明。二、原條文第三項移列為第四項。三、又監護宣告之裁定既因嗣後監護原因消滅而經撤銷確定，則因監護宣告而選定監護人及指定會同開具財產清冊之人之裁定，自當然失所附麗。又此係因嗣後發生之監護原因消滅經撤銷而失效，則其效力自應向後發生，並無溯及效力，爰設第三項規定。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624 駁回撤銷監護宣告聲請之裁定，不得抗告。得聲請撤銷監護宣告之人，對於前項裁定，得向曾就該聲請為裁判之地方法院提起撤銷之訴。第六百十條、第六百十二條至第六百十六條、第六百十八條及第六百二十三條第三項之規定，於前項之訴，準用之。
+* 616.1 （刪除）
 
-> 釋：一、配合修正後民法第十四條第二項規定，修正第一項及第二項文字。又為使文義更明確，將第二項文字酌予調整。二、本法第六百十七條第一項規定係因原來監護宣告不當，故以訴撤銷監護宣告，使其自始不發生效力。至於依本條第二項之撤銷之訴所為撤銷監護宣告確定判決，並無溯及效力，監護人所為之法律行為原不失其效力，故無準用之問題，爰刪除準用六百十七條第一項規定。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624.1 輔助宣告之裁定，自受輔助宣告之人受送達或當庭受告知時發生效力。法院為前項裁定前，應使受輔助宣告之人有陳述意見之機會。第五百九十七條至第六百零四條、第六百零五條第二項及第六百零六條至第六百十八條之規定，於輔助宣告聲請事件準用之。
+* 617 （刪除）
 
-> 釋：一、本條新增。二、配合修正後民法第十五條之一第一項規定，增訂輔助宣告聲請事件程序之相關規定。三、按聲請輔助宣告與聲請監護宣告，均係為保障心智有欠缺之人所設之制度，二者僅受宣告人之心智欠缺程度不同而有異，但其等關於於社會公益及個人利益之保護，情形相類，故兩者應施行之程序，有共通之處。惟就聲請輔助宣告與聲請監護宣告程序相異之點，則有特別規定之必要。為保護受輔助宣告之人之利益，明定輔助宣告之裁定，於送達或當庭告知予受輔助宣告人時即發生效力，如當庭告知與送達不一致時，以先生效者為準，爰設第一項規定。四、於聲請輔助宣告情形，受輔助宣告人仍有一定的心智，法院為第一項裁定前，應使受輔助宣告之人有陳述意見之機會，以保障其程序權，爰設第二項規定。五、至於與聲請監護宣告有共通處之事項，為免重複規定，爰於本條第三項就輔助宣告之聲請事件程序明定其準用監護宣告事件之相關規定。又依本項準用本法第六百零九條第一項規定，輔助宣告之裁定，不得抗告。如認為該裁定不當，應依本條第三項準用第六百零九條第二項規定，提起撤銷輔助宣告之訴，以資救濟，附此敘明。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624.2 第六百十九條至第六百二十四條及第六百二十四條之一第二項規定，於撤銷輔助宣告聲請事件準用之。
+* 618 （刪除）
 
-> 釋：一、本條新增。二、配合修正後民法第十五條之一第二項規定，增訂撤銷輔助宣告聲請事件程序之相關規定。三、按輔助宣告與監護宣告，僅係心智欠缺程度有異，於因宣告之原因消滅，而聲請撤銷原有之宣告，兩者應進行之程序，有共通之處，為免重複規定，特於本條就撤銷輔助宣告之聲請事件程序明定準用撤銷監護宣告聲請事件程序之相關規定。至於輔助宣告之原因已消滅，而得撤銷輔助宣告，關係受輔助宣告之人之權益甚鉅，法院在裁定前，應使其有陳述意見之機會，以保障其權益。又依本條準用第六百二十三條規定，對於撤銷輔助宣告之裁定，得提起抗告，以資救濟，併予敘明。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624.3 法院對於監護之聲請，認為未達民法第十四條第一項之程度，而有輔助宣告之原因者，得依聲請或依職權以裁定為輔助之宣告。法院為前項裁定前，應使聲請人及受輔助宣告之人有陳述意見之機會。
+* 619 （刪除）
 
-> 釋：一、本條新增。二、依修正後民法第十四條第三項規定，法院對於監護之聲請，認為未達同條第一項之程度者，得依同法第十五條之一第一項規定，為輔助宣告，且參諸同法第十四條第三項之立法理由，法院得依職權為輔助宣告之裁定。又聲請監護宣告之人於法院認為僅有應受輔助宣告之程度，自亦得變更為輔助宣告之聲請，爰設第一項規定。三、關於是否變更為輔助宣告，法院為裁定前應使聲請人及受輔助宣告之人有陳述意見之機會，以保障其程序權，爰設第二項規定。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624.4 前條第一項之裁定，不得抗告。依民法規定得聲請監護或輔助宣告之人，得向曾就前條第一項聲請為裁判之地方法院，提起撤銷輔助宣告之訴或宣告監護之訴。前條第一項輔助宣告及選定輔助人之裁定，於監護宣告判決確定時，嗣後失其效力。第五百八十二條之一、第五百九十八條至第六百零四條、第六百十條至第六百十六條及第六百十八條之規定，於第二項宣告監護之訴準用之。
+* 620 （刪除）
 
-> 釋：一、本條新增。二、法院所為輔助宣告裁定，依本法第六百二十四條之一第三項準用第六百零九條第一項規定，不得抗告。法院依前條第一項所為之裁定，亦為輔助宣告裁定，自應為同一處理，爰設第一項明定之。三、前條第一項裁定不得抗告，依民法規定得聲請監護或輔助宣告之人，如認為該項裁定自始不當時，應賦予一定之事後程序保障，以資救濟。基於程序處分權之法理，當事人對於前開裁定，可視其不服之內容而決定其提訴之種類，如認為法院輔助宣告之裁定自始不當者，即得提起撤銷輔助宣告之訴，於撤銷輔助宣告之判決確定時，輔助宣告裁定因被撤銷而自始失其效力；如認為法院僅為輔助之宣告而未為監護之宣告為不當者，則可提起宣告監護之訴，由法院逕為監護宣告，於判決確定時，始生監護宣告之效力，爰設第二項規定。四、撤銷輔助宣告之判決確定時，其輔助宣告因被撤銷而自始失其效力，則因輔助宣告裁定而選定輔助人之裁定，依本法第六百二十四條之一第三項準用第六百十六條之一規定，亦失所附麗，而自始失其效力。至於依本條第二項規定提起監護宣告之訴，原輔助宣告及選定輔助人之裁定，於監護宣告判決確定前，仍有其效力，僅於該判決確定後，始嗣後失其效力，與前開提起撤銷輔助宣告之訴之法律效果不同，爰設第三項規定。五、宣告監護之訴，係屬新訴訟類型，其與聲請監護宣告同屬請求法院以裁判宣告監護，兩者應進行之程序，有共通之處，本法第五百九十八條至第六百零四條關於監護宣告聲請事件之相關程序規定，自有準用之必要。再者，關於提起宣告監護之訴之當事人適格、提訴期間、受監護宣告之人之訴訟能力、訴之合併禁止、受監護宣告之人於判決確定前死亡者之處理、原告於判決確定前死亡者之承受訴訟、不適用認諾及訴訟上自認規定、法院得斟酌當事人所未提出之事實並依職權調查證據、法院於判決確定前因保護受監護宣告之人之身體或財產所為必要之處分及判決確定之公告要旨等事項，則準用同屬訴訟程序之撤銷監護宣告之訴規定；當事人就監護宣告及選定監護人、指定會同開具財產清冊之人之判決，僅就監護宣告之判決提起上訴者，準用本法第五百八十二條之一第一項規定，對於原判決就選定監護人及指定會同開具財產清冊之人之判決部分，應視為一併提起上訴，以免裁判岐異；而當事人就法院所為監護宣告之判決，僅就選任監護人及指定會同開具財產清冊之人部分聲明不服者，則準用第五百八十二條之一第三項規定，適用本法第六百零九條之一關於抗告程序之規定，爰設第四項規定。又撤銷輔助宣告之訴，可直接適用本法第六百二十四條之一第三項規定，無須重複規定，併予敘明。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624.5 法院對於撤銷監護宣告之聲請，認受監護宣告之人受監護原因消滅，而仍有輔助之必要者，得依聲請或依職權以裁定變更為輔助之宣告。第六百二十三條第三項及第六百二十四條之三第二項規定，於前項變更裁定準用之。第一項變更裁定，不得抗告。依民法規定得聲請監護或輔助宣告之人，得向曾就第一項聲請為裁判之地方法院，提起撤銷輔助宣告之訴或撤銷變更之訴。第六百十條至第六百十八條規定，於前項撤銷變更之訴準用之。原監護宣告、選定監護人及指定會同開具財產清冊之人之裁定，於變更裁定經判決撤銷確定時，回復其效力。
+* 621 （刪除）
 
-> 釋：一、本條新增。二、依修正後民法第十四條第四項規定，受監護之原因消滅，而仍有輔助之必要者，法院得依第十五條之一第一項規定變更為輔助之宣告，參諸第十四條第四項之立法理由，法院得逕行變更為輔助宣告之裁定。故法院對於撤銷監護宣告之聲請，認為受監護宣告之人，其受監護之原因消滅，而仍有輔助之必要者，自亦得依聲請或依職權變更為輔助宣告之裁定，爰設第一項規定。三、法院所為第一項變更裁定確定生效時，因監護宣告時而選定監護人及指定會同開具財產清冊之人之裁定，已無續存效力之必要；而自監護宣告變更為輔助宣告，對聲請人及受輔助宣告之人權益影響甚鉅，法院為裁定前應使其等有陳述意見之機會，以保障其程序權，爰設第二項規定。四、法院所為輔助宣告裁定，依本法第六百二十四條之一第三項準用第六百零九條第一項規定，不得抗告。法院依第一項所為之裁定，亦為輔助宣告之裁定，應為同一處理，爰設第三項明定之。至於輔助宣告時，依本法第六百二十四條之一準用第六百零四條第一項規定，應依職權選任輔助人，自屬當然。五、依民法規定得聲請監護或輔助宣告之人，如認為第一項裁定自始不當時，應賦予一定之事後程序保障，以資救濟。基於程序處分權之法理，當事人對於前開裁定，可視其不服之內容而決定其提訴之種類，如認為受監護原因已消滅，且無輔助宣告之必要者，得提起撤銷輔助宣告之訴，以撤銷法院所為之輔助宣告；如認為尚有監護原因而變更為輔助宣告係不當者，則得提起撤銷變更之訴，以回復原監護宣告之效力，爰設第四項規定。六、本法第六百十條至第六百十八條關於撤銷監護宣告之訴程序之相關規定，於前項撤銷變更之訴有準用之必要，爰設第五項規定。至於撤銷輔助宣告之訴，可直接適用本法第六百二十四條之一第三項規定，無須重複規定，併予敘明。七、對於第一項之變更裁定提起撤銷變更之訴而經法院判決撤銷確定時，即回復至原監護宣告之狀態，不必另為監護宣告，故原監護宣告、選定監護人及指定會同開具財產清冊之人之裁定，均應回復其效力，爰設第六項規定。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624.6 法院對於變更監護宣告為輔助宣告之聲請，認有理由者，應以裁定變更之。第六百二十四條之五第二項至第六項規定，於前項變更裁定準用之。
+* 622 （刪除）
 
-> 釋：一、本條新增。二、法院對於變更監護宣告為輔助宣告之聲請，認為有理由者，參酌修正後民法第十四條第四項規定，應為變更為輔助之宣告，爰設第一項規定。三、法院所為前開變更裁定，其性質與前條第一項之變更裁定相類，為避免重複規定，特於本條第二項明定裁定變更事件程序定其準用前條第二項至第六項規定。又本條第二項係規範聲請變更監護宣告為輔助宣告之事件，故其準用之範圍，僅限於撤銷變更之訴，至於認為法院宣告輔助宣告為不當而提起撤銷輔助宣告之訴，可逕適用本法第六百二十四條之一第三項規定，不在本條第二項準用之列，自不待言。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624.7 受輔助宣告之人，法院認有受監護之必要者，得依聲請以裁定變更為監護宣告。第六百二十四條之五第二項至第六項規定，於前項變更裁定準用之。
+* 623 （刪除）
 
-> 釋：一、本條新增。二、受輔助宣告之人，因精神障礙或其他心智缺陷致不能為意思表示或受意思表示或不能辨別其意思表示之效果，而有受監護宣告之必要者，依民法第十五條之一第三項規定，法院得依第十四條第一項規定，變更為監護之宣告，則受輔助宣告之人，法院認為有受監護必要者，自得依聲請以裁定將輔助宣告變更為監護宣告；若有聲請權之人均未提出聲請，法院不得依職權逕將輔助宣告變更為監護宣告，爰設第一項規定。三、法院所為前開變更裁定，其性質與本法第六百二十四條之五第一項之變更裁定相同，為避免重複規定，該條第二項至第六項規定，有準用之必要，爰設第二項規定。又本項係規範聲請變更輔助宣告為監護宣告之事件，故其準用之範圍，僅限於撤銷變更之訴，至於認為法院宣告監護宣告為不當而提起撤銷監護宣告之訴，可逕適用本法第六百零九條以下關於撤銷監護宣告之訴之相關規定，不在本條第二項準用之列，自不待言。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 624.8 法院對於輔助宣告之聲請，認有監護之必要者，應向聲請人曉諭變更為監護宣告之聲請，不為變更者，應駁回其聲請。
+* 624 （刪除）
 
-> 釋：一、本條新增。二、法院對於輔助宣告之聲請，認有監護之必要者，不得依職權逕為監護之宣告，應向聲請人曉諭變更，如聲請人同意變更為監護宣告聲請者，即按監護宣告聲請程序處理，如聲請人經法院曉諭後仍不變更者，則應以裁定駁回其輔助宣告之聲請，爰設本條。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 625 宣告死亡事件，除本章別有規定外，準用第五百四十條至第五百五十三條之規定。
+* 624.1 （刪除）
 
-* 626 宣告死亡之聲請，專屬失蹤人住所地之法院管轄。第五百六十八條第一項但書、第二項及第三項之規定，於前項聲請準用之。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 627 宣告死亡之聲請，應表明其原因、事實及證據。
+* 624.2 （刪除）
 
-* 628 公示催告，應記載下列各款事項：一、失蹤人應於期間內陳報其生存，如不陳報，即應受死亡之宣告。二、凡知失蹤人之生死者，應於期間內將其所知陳報法院。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-> 釋：「左列」修正為「下列」。
+* 624.3 （刪除）
 
-* 629 前條陳報期間，自公示催告最後登載公報或新聞紙之日起，應有六個月以上。失蹤人滿百歲者，公示催告得僅黏貼於法院之牌示處。前項情形，其陳報期間，得定為自黏貼牌示處之日起二個月以上。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 630 有聲請權之人得為共同聲請人，加入程序或代聲請人續行程序。
+* 624.4 （刪除）
 
-* 631 第六百零一條之規定，於宣告死亡事件準用之。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 632 為失蹤人生存之陳報，而聲請人否認其事實者，法院應於有確定裁判前，以裁定命停止程序。
+* 624.5 （刪除）
 
-* 633 宣告死亡之判決，應確定死亡之時。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 634 關於宣告死亡程序之費用，如宣告死亡者，由遺產負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
+* 624.6 （刪除）
 
-> 釋：一、本條第一項不修正。二、依民法第八條修正條文，檢察官於宣告死亡事件，亦得為聲請人；當檢察官為聲請人時，如有應行負擔程序費用之情形，參照非訟事件法第八條第一項但書之例，其費用應由國庫支付。爰於本條第二項增設但書，以資配合。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 635 撤銷死亡宣告之訴，檢察官或有法律上利害關係之人，得提起之。第五百五十一條第二項所定之聲請人死亡者，得以其他有法律上利害關係之人為被告。
+* 624.7 （刪除）
 
-> 釋：一、依民法第八條修正條文規定，檢察官於宣告死亡事件，亦得為聲請人，因此，檢察官在撤銷死亡宣告之訴，即可能成為訴訟當事人，爰於本條第一項增列之，以利適用。二、本條第二項不修正。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 636 撤銷死亡宣告之訴，除準用第五百五十一條第二項之規定外，如受死亡宣告人尚生存或確定死亡之時不當者，亦得提起之。
+* 624.8 （刪除）
 
-* 637 第五百五十二條之規定，於以受死亡宣告人尚生存為理由，提起撤銷死亡宣告之訴者，不適用之。
+> 釋：一、本條刪除。二、家事事件法將監護及輔助宣告事件全部非訟化，定為丁類家事非訟事件，並分別於第四編第十章、第十一章定其適用程序，爰配合刪除本條。
 
-* 638 撤銷死亡宣告之訴有數宗者，法院應合併之，適用第五十六條之規定。
+* 625 （刪除）
 
-> 釋：第五十六條第二項於九十二年一月十四日修正時，業經刪除，爰配合修正之。
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
 
-* 639 第五百八十一條、第五百九十四條、第五百九十五條及第六百十三條之規定，於撤銷死亡宣告之訴準用之。
+* 626 （刪除）
 
-* 640 撤銷死亡宣告或更正死亡之時之判決，不問對於何人均有效力。但判決確定前之善意行為，不受影響。因宣告死亡取得財產者，如因前項判決失其權利，僅於現受利益之限度內，負歸還財產之責。
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 627 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 628 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 629 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 630 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 631 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 632 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 633 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 634 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 635 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 636 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 637 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 638 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 639 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
+
+* 640 （刪除）
+
+> 釋：一、本條刪除。二、家事事件法將死亡宣告事件全部非訟化，定為丁類家事非訟事件，並於第四編第九章定其適用程序，爰配合刪除本條。
 
