行政程序法 2013.4.30

--- a/行政-內政/行政程序法.md
+++ b/行政-內政/行政程序法.md
@@ -518,9 +518,9 @@
 
 > 釋：照審查條文通過。
 
-* 131 公法上之請求權，除法律有特別規定外，因五年間不行使而消滅。公法上請求權，因時效完成而當然消滅。前項時效，因行政機關為實現該權利所作成之行政處分而中斷。
+* 131 公法上之請求權，於請求權人為行政機關時，除法律另有規定外，因五年間不行使而消滅；於請求權人為人民時，除法律另有規定外，因十年間不行使而消滅。公法上請求權，因時效完成而當然消滅。前項時效，因行政機關為實現該權利所作成之行政處分而中斷
 
-> 釋：照黨團協商條文通過。
+> 釋：一、修正通過。二、由於政府在公法上請求佔有證據保持及公權力行使的優勢，而人民往往因其訊息的劣勢，常有請求權時效完成的情形發生，原條文第一項規定，政府與人民對彼此之請求權行使適用同等的消滅時效期間，顯然未盡公允。有鑑於此，公法請求權若要適用民法上消滅時效概念，應區分請求權人是政府或人民，由於政府相對於人民在公法請求佔有優勢性，人民為請求權人時的消滅時效應長於政府為請求權人時，故作以上之區分以保障人民行使公法上請求權時效之公平性，爰將原條文第一項予以修正。
 
 * 132 行政處分因撤銷、廢止或其他事由而溯及既往失效時，自該處分失效時起，已中斷之時效視為不中斷。
 
